# libmbCHIP8

./: CMakeLists.txt  Makefile  README.md
libmbCHIP8/: cpu.cpp  cpu.h
libmbCHIP8/include/libmbCHIP8/: libmbchip8.h  libmbchip8_api.h
libmbCHIP8/src/core/: libmbchip8.cpp
mbCHIP8-Qt/: displaywidget.cpp  displaywidget.h  main.cpp  mainwindow.cpp  mainwindow.h
mbCHIP8-SDL/: cpu.h  main.cpp
mbCHIP8-SDL2/: CMakeLists.txt  main.cpp
tools/: msys_dist.sh
