cmake_minimum_required(VERSION 3.10)
project(libmbCHIP8)

# Require C++17 (and position independent code)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(BUILD_SDL2 "Enables the SDL2 frontend (requires SDL2)." OFF)

set(LIBMBCHIP8_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libmbCHIP8/include")

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/libmbCHIP8/include/libmbCHIP8")

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()

set(LIBMBCHIP8_API_HEADERS
	libmbCHIP8/include/libmbCHIP8/libmbchip8_api.h
	libmbCHIP8/include/libmbCHIP8/libmbchip8.h)

set(LIBMBCHIP8
	libmbCHIP8/src/core/libmbchip8.cpp)

if (BUILD_SDL2 STREQUAL "ON")
	message(STATUS "Building mbCHIP8-SDL2...")
	add_subdirectory(mbCHIP8-SDL2)
endif()

add_library(mbCHIP8 ${LIBMBCHIP8} ${LIBMBCHIP8_API_HEADERS})
target_include_directories(mbCHIP8 PUBLIC ${LIBMBCHIP8_INCLUDE_DIR})
target_compile_definitions(mbCHIP8 PRIVATE LIBMBCHIP8_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libmbCHIP8 ALIAS mbCHIP8)

if (WIN32)
    message(STATUS "Operating system is Windows.")
    if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
	target_compile_options(mbCHIP8 PRIVATE -Wall)
	message(STATUS "Compiler is MinGW.")
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL MSVC)
	message(WARNING "MSVC support is HIGHLY experimental, and may not even compile correctly, so be EXTREMELY careful here!")
	target_compile_options(mbCHIP8 PRIVATE /W4)
	message(STATUS "Compiler is MSVC.")
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
	message(WARNING "Clang support on Windows is HIGHLY experimental, and may not even compile correctly, so be EXTREMELY careful here!")
	target_compile_options(mbCHIP8 PRIVATE -Wall)
	message(STATUS "Compiler is Clang.")
    else()
	message(SEND_ERROR "Compiler not supported.")
	return()
    endif()
elseif (UNIX AND NOT APPLE)
    message(STATUS "Operating system is Linux.")
    if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
	target_compile_options(mbCHIP8 PRIVATE -Wall)
	message(STATUS "Compiler is GCC.")
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
	target_compile_options(mbCHIP8 PRIVATE -Wall)
	message(STATUS "Compiler is Clang.")
    else()
	message(SEND_ERROR "Compiler not supported.")
	return()
    endif()
elseif (APPLE)
    message(STATUS "Operating system is Mac.")
    if (CMAKE_CXX_COMPILER_ID STREQUAL AppleClang)
	target_compile_options(mbCHIP8 PRIVATE -Wall)
	message(STATUS "Compiler is AppleClang.")
    else()
	message(SEND_ERROR "Compiler not supported.")
	return()
    endif()
else()
    message(SEND_ERROR "Operating system not supported.")
    return()
endif()
